tests/src/frontend/syntax/invalid/named_lambda_parameter_type.sk
fun main(): String {
  x: {p: String = "Fail"} ~> void = {p} ~> void;
  "Fail"
}
